feat(update): Enhance update checks to fetch the latest version from Modrinth and improve notification messages